name:                live
version:             0.1
synopsis:            Live programming sessions
homepage:            https://github.com/snowleopard/live
license:             MIT
license-file:        LICENSE
author:              Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
maintainer:          Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:           Andrey Mokhov, 2019
category:            Algorithms, Data Structures
build-type:          Simple
extra-source-files:  README.md
description:         Live programming sessions
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/snowleopard/live

library
  hs-source-dirs:       src
  exposed-modules:      Graph
                      , Solution.Graph
  build-depends:        base             >= 4.7     && < 5,
                        containers       >= 0.5.7.1 && < 0.6
  default-language:     Haskell2010
  GHC-options:          -Wall
                        -fno-warn-name-shadowing
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
